--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+numpy==1.18.1
+scipy==1.4.1
+matplotlib==3.1.3
 librosa==0.7.2
-numba==0.48.0
 tqdm==4.42.1
+pandas==1.1.2
+memory_profiler==0.58.0
+scikit_learn==0.24.2
